Gitti vaati kommittia, koska olin ilmeisesti tehnyt vahingossa joitakin muutoksia asetukset-haaraan, joten kommitoin muutokseni nyt.

--- a/Lintukoto-sovellus/src/app/asetukset/asetukset.component.html
+++ b/Lintukoto-sovellus/src/app/asetukset/asetukset.component.html
@@ -65,7 +65,7 @@
 <fieldset form="form1">
 <legend>Opiskeluasetukset</legend>
       <div class="form-check">
-<!-- Muutettiin  label-elementti kappaleeksi (p), sillä ruudunlukuohjelmaa, sillä haluan osallistua mahdollisiiin ryhmäni opiskelutuokioihin -tekstin ja säätimen kyllä-tekstin kanssa olisi tullut ongelmia ruudunlukujohjelman kanssa (lähinnä NVDA). -->
+<!-- Muutettiin  label-elementti kappaleeksi (p), sillä haluan osallistua mahdollisiin ryhmäni opiskelutuokioihin -tekstin ja säätimen kyllä-tekstin kanssa olisi tullut ongelmia ruudunlukujohjelman kanssa (lähinnä NVDA). -->
 <p>Olen kiinnostunut osallistumaan mahdollisiin ryhmäni
           opiskelutuokioihin</p>
         <br />
