--- a/Lintukoto-sovellus/src/app/kirjautuminen/kirjautuminen.component.css
+++ b/Lintukoto-sovellus/src/app/kirjautuminen/kirjautuminen.component.css
@@ -1,11 +1,12 @@
 /* tekstikentän muotoilut*/
 .tekstit {
-  width: 370px;
+  width: 470px;
   position: absolute;
   top: 40px;
   left: 15%;
   text-align: center;
   margin: 4em auto;
+  color: #fefefd;
 }
 
 /* sisäänkirjautumislomakkeen muotoilut*/
@@ -14,9 +15,10 @@
   padding: 1em;
   position: absolute;
   top: 150px;
-  left: 50%;
+  left: 60%;
   text-align: center;
   margin: 4em auto;
+  color: white;
 }
 
 input,
@@ -46,7 +48,7 @@ label {
 
 /* kuvan muotoilut*/
 #lintukoto_logo {
-  width: 370px;
+  width: 470px;
 }
 .kuva {
   text-align: center;
