Lisätty asianmukaiset tyylimäärittelyt Asetukset-,  Aktiiviset kurssit- ja suoritetut kurssit -sivujen css-tiedostoihin. Muutettu Aktiiviset kurssit -sivun käyttöliittymää siten, että ykköstason otsikko Aktiiviset kurssit ja kakkostason otsikko Kurssilistaus eivät näy näkevälle vaan ruudunlukuohjelman käyttäjälle käyttöen font-size-attrbuutin arvoa 0px. Lisäksi painikkeet Lisää uusi kurssi, Lisää uusi muistiinpano ja Lisää uusi tehtävä on siirretty näkeville näkymättömän ykköstason otssikon Aktiiviset kurssit jälkeen. Kakkostason otsikon Kurssilista (näkyy vain ruudunlukuohjelman käyttäjälle) jälkeen on lista, jossa kurssit ovat (näkyy kaikille käyttäjille).

--- a/Lintukoto-sovellus/src/app/aktiiviset-kurssit/aktiiviset-kurssit.component.css
+++ b/Lintukoto-sovellus/src/app/aktiiviset-kurssit/aktiiviset-kurssit.component.css
@@ -32,11 +32,24 @@
   border: solid black 1px;
   border-radius: 5px;
 }
-
-h3 {
-  color: white;
+/* Otsikkojen (näkeville näkymättömät "Aktiiviset kurssit" (taso 1), "Kurssilistaus" (taso 2) ja kaikille näkyvät kurssien otsikot (tulevat tietokannasta, taso 3), muistiinpanot (tulevat tietokannasta, taso 4) ja sekä "Tehdyt tehtävät" ja "Tekemättömät tehtävät" kurssin alapuolella (taso 4). */
+h1 {
+font-size: 0px;
+/* Kokeiltiin text-indent: -10000px;, mutta tulos näytti näkevän henkklön mukaan huonommalta, joten muutosta ei tehty tällä asetuksella. */
 }
 
+h2 {
+font-size: 0px;
+/* Kokeiltiin text-indent: -10000px;, mutta tulos näytti näkevän henkklön mukaan huonommalta, joten muutosta ei tehty tällä asetuksella. */
+}
+
+h3 {
+font-size: 1.25em;
+  color: white;
+}
+h4 {
+font-size: 1em;
+}
 .kurssi-kortti {
   margin: 1em 1em;
   width: 200px;
