--- a/Lintukoto-sovellus/src/app/asetukset/asetukset.component.html
+++ b/Lintukoto-sovellus/src/app/asetukset/asetukset.component.html
@@ -75,7 +75,7 @@
           type="checkbox"
           [(ngModel)]="asetuksetLadattu.asetukset.yhteisetTuokiot"
           name="yhteisetTuokiot"
-          class="form-check-input"
+          class="form-check-input inblock"
 id="yhteisetTuokiot"
         />
         <!-- Valistus<br /> -->
@@ -93,7 +93,7 @@ id="yhteisetTuokiot"
           type="radio"
           name="opiskeluajankohta"
           [(ngModel)]="asetuksetLadattu.asetukset.opiskeluajankohta"
-          class="form-check-input"
+          class="form-check-input inblock"
           value="milloinVain"
 id="mihinAikaanVain"
         />
@@ -105,7 +105,7 @@ id="mihinAikaanVain"
           type="radio"
           name="opiskeluajankohta"
           [(ngModel)]="asetuksetLadattu.asetukset.opiskeluajankohta"
-          class="form-check-input"
+          class="form-check-input inblock"
           value="aamupaiva"
 id="aamupaiva"
         />
@@ -117,7 +117,7 @@ id="aamupaiva"
           type="radio"
           name="opiskeluajankohta"
           [(ngModel)]="asetuksetLadattu.asetukset.opiskeluajankohta"
-          class="form-check-input"
+          class="form-check-input inblock"
           value="iltapaiva"
 id="iltapaiva"
         />
@@ -138,7 +138,7 @@ id="iltapaiva"
           [(ngModel)]="asetuksetLadattu.asetukset.pollojenNakyminen"
           checked="checked"
           name="pollojenNakyminen"
-          class="form-check-input"
+          class="form-check-input inblock"
 id="pollojenNakyminen"
         />
         <br />
@@ -175,8 +175,7 @@ id="henkipolloOpinnot"
             class="form-check-input inblock"
 id="henkipolloElama"
           />
-          
-        </div>
+            </div>
         <!-- Elämänhallinta<br /> -->
         <div>
           <label
