--- a/Lintukoto-sovellus/src/app/asetukset/asetukset.component.css
+++ b/Lintukoto-sovellus/src/app/asetukset/asetukset.component.css
@@ -12,7 +12,12 @@ h1 {
   width: 50%;
   margin: auto;
 }
+/* fieldset-luokka, joka määrittelee lomakesäätimien tyylin. */
+fieldset {
+/* Tasataan teksti keskelle text-align -attribuutilla. */
+text-align: center;
 
+}
 /* Muokkaa asetus-sivun "kyselyjen" yksittäisiä kyselykohtia */
 .form-check {
   margin-top: 20px;
