--- a/Lintukoto-sovellus/src/app/aktiiviset-kurssit/aktiiviset-kurssit.component.css
+++ b/Lintukoto-sovellus/src/app/aktiiviset-kurssit/aktiiviset-kurssit.component.css
@@ -25,7 +25,7 @@
   overflow: auto;
   height: 150px;
   margin-top: 1em;
-  background-image: url("/../../assets/images/muistilappu.png");
+  background-image: url("../../assets/images/muistilappu.png");
   background-position: center;
   background-size: initial;
   margin-top: 1em;
