--- a/Lintukoto-sovellus/src/app/asetukset/asetukset.component.css
+++ b/Lintukoto-sovellus/src/app/asetukset/asetukset.component.css
@@ -25,6 +25,10 @@ text-align: center;
   text-align: center;
 }
 
+p {
+  font-weight: bold;
+}
+
 .tallennusnappi {
   width: 100px;
   margin: 1em auto;
