--- a/Lintukoto-sovellus/src/app/asetukset/asetukset.component.html
+++ b/Lintukoto-sovellus/src/app/asetukset/asetukset.component.html
@@ -67,9 +67,8 @@
       <div class="form-check">
 <!-- Muutettiin  label-elementti kappaleeksi (p), sillä haluan osallistua mahdollisiin ryhmäni opiskelutuokioihin -tekstin ja säätimen kyllä-tekstin kanssa olisi tullut ongelmia ruudunlukujohjelman kanssa (lähinnä NVDA). -->
 <p>Olen kiinnostunut osallistumaan mahdollisiin ryhmäni
-          opiskelutuokioihin</p>
-        <br />
-        <label class="form-check-label bold" for="yhteisetTuokiot"
+          opiskelutuokioihin:</p>
+        <label class="form-check-label" for="yhteisetTuokiot"
           >Kyllä</label>
         <input
           type="checkbox"
@@ -85,8 +84,7 @@ id="yhteisetTuokiot"
 <p>Opiskelen tehokkaimmin tähän aikaan päivästä:</p>
         
 <!-- Muutettiin  label-elementti kappaleeksi (p), sillä ruudunlukuohjelmaa, sillä haluan osallistua mahdollisiiin ryhmäni opiskelutuokioihin -tekstin ja säätimen kyllä-tekstin kanssa olisi tullut ongelmia ruudunlukujohjelman kanssa (lähinnä NVDA). Seuraavien säädinten label-elementtien for-attribuutti ja id-attribuutti on keksitty, sillä niitä ei ollut koodissa ennen muutosten teon aloittamista. -->
-<br />
-        <label class="form-check-label bold" for="mihinAikaanVain"
+        <label class="form-check-label" for="mihinAikaanVain"
           >Mihin aikaan vain</label>
 
         <input
@@ -98,8 +96,8 @@ id="yhteisetTuokiot"
 id="mihinAikaanVain"
         />
         <br />
-        <label class="form-check-label bold" for="aamupaiva"
-          >aamupäibbä</label>
+        <label class="form-check-label" for="aamupaiva"
+          >Aamupäivä</label>
 
         <input
           type="radio"
@@ -110,7 +108,7 @@ id="mihinAikaanVain"
 id="aamupaiva"
         />
         <br />
-        <label class="form-check-label bold" for="iltapaiva"
+        <label class="form-check-label" for="iltapaiva"
           >Iltapäivä</label>
 
         <input
@@ -130,8 +128,7 @@ id="iltapaiva"
 <legend>Pöllöjen näkyvyys</legend>
       <div class="form-check">
 <p>Haluan nähdä pöllöt sovelluksessani:</p>
-        <br />
-        <label class="form-check-label bold" for="pollojenNakyminen"
+        <label class="form-check-label" for="pollojenNakyminen"
           >Kyllä</label>
         <input
           type="checkbox"
@@ -148,7 +145,6 @@ id="pollojenNakyminen"
 <legend>Henkipöllön asetukset</legend>
       <div class="form-check">
 <p>Haluan nämä Henkipöllön ominaisuudet:</p>
-        <br />
         <div>
           <label
             class="form-check-label labeli"
