Korjattu eräs asetukset-näkymän virhe Aamupäivä-tekstissä.

--- a/Lintukoto-sovellus/src/app/asetukset/asetukset.component.html
+++ b/Lintukoto-sovellus/src/app/asetukset/asetukset.component.html
@@ -99,7 +99,7 @@ id="mihinAikaanVain"
         />
         <br />
         <label class="form-check-label bold" for="aamupaiva"
-          >aamupäibbä</label>
+          >aamupäivä</label>
 
         <input
           type="radio"
